--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
     "mongoose": "^4.12.3",
+    "ng2-redux": "^5.1.2",
+    "redux": "^3.7.2",
+    "redux-observable": "^0.16.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
+    "tassign": "^1.0.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
